{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 168,
  "lineage": "7a56db8a-5bfd-67f5-2965-c020d3cb8551",
  "resources": [
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:subnet/subnet-04dcf19420ae8bcd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04dcf19420ae8bcd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267331969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c83a6ee27328a529"
          }
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:subnet/subnet-01b3bfe23272cac24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-01b3bfe23272cac24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267331969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c83a6ee27328a529"
          }
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:vpc/vpc-0c83a6ee27328a529",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0de48da002ca007a0",
            "default_route_table_id": "rtb-01ce9abd344752c9e",
            "default_security_group_id": "sg-07e69e15edd8f1220",
            "dhcp_options_id": "dopt-035a5cb34540247c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0c83a6ee27328a529",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ce9abd344752c9e",
            "owner_id": "533267331969"
          }
        }
      ]
    },
    {
      "module": "module.github-api",
      "mode": "managed",
      "type": "aws_lb",
      "name": "github_api_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267331969:loadbalancer/app/github-api-lb/b4f906cebc7a864b",
            "arn_suffix": "app/github-api-lb/b4f906cebc7a864b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "github-api-lb-1873534518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267331969:loadbalancer/app/github-api-lb/b4f906cebc7a864b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "github-api-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a0e9a09f375d82fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b3bfe23272cac24"
              },
              {
                "subnet_id": "subnet-04dcf19420ae8bcd9"
              }
            ],
            "subnets": [
              "subnet-01b3bfe23272cac24",
              "subnet-04dcf19420ae8bcd9"
            ],
            "vpc_id": "vpc-0c83a6ee27328a529",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue",
            "module.github-api.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.github-api",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "github_api_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267331969:listener/app/github-api-lb/b4f906cebc7a864b/728b92d1c5d36585",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:533267331969:targetgroup/tf-20240711131303222700000001/6ff2817e4d0247b1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267331969:listener/app/github-api-lb/b4f906cebc7a864b/728b92d1c5d36585",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:533267331969:loadbalancer/app/github-api-lb/b4f906cebc7a864b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue",
            "module.github-api.aws_lb.github_api_lb",
            "module.github-api.aws_lb_target_group.github_api_lb_tg",
            "module.github-api.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.github-api",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "github_api_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267331969:targetgroup/tf-20240711131303222700000001/6ff2817e4d0247b1",
            "arn_suffix": "targetgroup/tf-20240711131303222700000001/6ff2817e4d0247b1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/_health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267331969:targetgroup/tf-20240711131303222700000001/6ff2817e4d0247b1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:533267331969:loadbalancer/app/github-api-lb/b4f906cebc7a864b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240711131303222700000001",
            "name_prefix": "tf-",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c83a6ee27328a529"
          },
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue"
          ]
        }
      ]
    },
    {
      "module": "module.github-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "github_api_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:security-group/sg-0d1e0b2cb4b9171fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1e0b2cb4b9171fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0e9a09f375d82fb"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "533267331969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c83a6ee27328a529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue",
            "module.github-api.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.github-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:security-group/sg-0a0e9a09f375d82fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0e9a09f375d82fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "533267331969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c83a6ee27328a529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue"
          ]
        }
      ]
    },
    {
      "module": "module.github-clone",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "github_clone_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267331969:security-group/sg-00160ade32c1f90f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00160ade32c1f90f1",
            "ingress": [],
            "name": "ecs-another-sg",
            "name_prefix": "",
            "owner_id": "533267331969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c83a6ee27328a529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.aws_default_subnet.default_a",
            "module.common.aws_default_subnet.default_b",
            "module.common.aws_default_vpc.default",
            "module.common.aws_sqs_queue.sqs_queue",
            "module.github-api.aws_cloudwatch_log_group.github_api",
            "module.github-api.aws_ecr_repository.github_api",
            "module.github-api.aws_ecs_cluster.github_api",
            "module.github-api.aws_ecs_service.github_api",
            "module.github-api.aws_ecs_task_definition.github_api",
            "module.github-api.aws_iam_role.task_execution_role",
            "module.github-api.aws_iam_role_policy.task_execution_role_policy",
            "module.github-api.aws_iam_role_policy_attachment.task_execution_role_policy_attachment",
            "module.github-api.aws_lb.github_api_lb",
            "module.github-api.aws_lb_listener.github_api_lb_listener",
            "module.github-api.aws_lb_target_group.github_api_lb_tg",
            "module.github-api.aws_security_group.github_api_ecs_sg",
            "module.github-api.aws_security_group.load_balancer_sg",
            "module.github-api.data.aws_iam_policy_document.task_execution_role_assume_role_policy",
            "module.github-api.data.aws_iam_policy_document.task_execution_role_policy",
            "module.github-api.null_resource.push_github_api"
          ]
        }
      ]
    }
  ]
}